Created branch for ticket #354 "Add headers to the cache and the NDAT files"
git-svn-id: https://svn.code.sf.net/p/numere/source/branches/newfileheaders@543 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -42,6 +42,7 @@
 				<Linker>
 					<Add library="wxmsw30u_stc" />
 					<Add library="wxscintilla" />
+					<Add library="wxmsw30u_propgrid" />
 					<Add library="wxmsw30u_media" />
 					<Add library="wxmsw30u_adv" />
 					<Add library="wxmsw30u_gl" />
@@ -188,6 +189,7 @@
 					<Add option="-s" />
 					<Add library="wxmsw30u_stc" />
 					<Add library="wxscintilla" />
+					<Add library="wxmsw30u_propgrid" />
 					<Add library="wxmsw30u_media" />
 					<Add library="wxmsw30u_adv" />
 					<Add library="wxmsw30u_gl" />
@@ -240,6 +242,7 @@
 				<Linker>
 					<Add library="wxmsw30u_stc" />
 					<Add library="wxscintilla" />
+					<Add library="wxmsw30u_propgrid" />
 					<Add library="wxmsw30u_media" />
 					<Add library="wxmsw30u_adv" />
 					<Add library="wxmsw30u_gl" />
@@ -325,14 +328,20 @@
 		<Unit filename="gui/dialogs/RemoteFileDialog.h" />
 		<Unit filename="gui/dialogs/debugviewer.cpp" />
 		<Unit filename="gui/dialogs/debugviewer.hpp" />
+		<Unit filename="gui/dialogs/dependencydialog.cpp" />
+		<Unit filename="gui/dialogs/dependencydialog.hpp" />
 		<Unit filename="gui/dialogs/duplicatecodedialog.cpp" />
 		<Unit filename="gui/dialogs/duplicatecodedialog.hpp" />
 		<Unit filename="gui/dialogs/fndrpldialog.cpp" />
 		<Unit filename="gui/dialogs/fndrpldialog.hpp" />
 		<Unit filename="gui/dialogs/grouppanel.cpp" />
 		<Unit filename="gui/dialogs/grouppanel.hpp" />
+		<Unit filename="gui/dialogs/packagedialog.cpp" />
+		<Unit filename="gui/dialogs/packagedialog.hpp" />
 		<Unit filename="gui/dialogs/renamesymbolsdialog.cpp" />
 		<Unit filename="gui/dialogs/renamesymbolsdialog.hpp" />
+		<Unit filename="gui/dialogs/textoutputdialog.cpp" />
+		<Unit filename="gui/dialogs/textoutputdialog.hpp" />
 		<Unit filename="gui/dialogs/tipdialog.cpp" />
 		<Unit filename="gui/dialogs/tipdialog.hpp" />
 		<Unit filename="gui/dialogs/treelistctrl.cpp" />
@@ -455,6 +464,8 @@
 		<Unit filename="kernel/core/documentation/documentation.hpp" />
 		<Unit filename="kernel/core/filesystem.cpp" />
 		<Unit filename="kernel/core/filesystem.hpp" />
+		<Unit filename="kernel/core/io/file.cpp" />
+		<Unit filename="kernel/core/io/file.hpp" />
 		<Unit filename="kernel/core/io/fileops.cpp" />
 		<Unit filename="kernel/core/io/fileops.hpp" />
 		<Unit filename="kernel/core/io/output.cpp" />
@@ -489,6 +500,8 @@
 		<Unit filename="kernel/core/plugin_random.cpp" />
 		<Unit filename="kernel/core/plugin_statistics.cpp" />
 		<Unit filename="kernel/core/plugins.hpp" />
+		<Unit filename="kernel/core/procedure/dependency.cpp" />
+		<Unit filename="kernel/core/procedure/dependency.hpp" />
 		<Unit filename="kernel/core/procedure/flowctrl.cpp" />
 		<Unit filename="kernel/core/procedure/flowctrl.hpp" />
 		<Unit filename="kernel/core/procedure/procedure.cpp" />
