Fixed outdated project file in implementation of ticket #375
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@555 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -328,6 +328,8 @@
 		<Unit filename="gui/dialogs/RemoteFileDialog.h" />
 		<Unit filename="gui/dialogs/debugviewer.cpp" />
 		<Unit filename="gui/dialogs/debugviewer.hpp" />
+		<Unit filename="gui/dialogs/dependencydialog.cpp" />
+		<Unit filename="gui/dialogs/dependencydialog.hpp" />
 		<Unit filename="gui/dialogs/duplicatecodedialog.cpp" />
 		<Unit filename="gui/dialogs/duplicatecodedialog.hpp" />
 		<Unit filename="gui/dialogs/fndrpldialog.cpp" />
