Hopefully finally fixed the heap corruption introduced by the terminal.
git-svn-id: https://svn.code.sf.net/p/numere/source/branches/terminalupdate@572 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -22,6 +22,7 @@
 				<Option compiler="tdm-gcc" />
 				<Compiler>
 					<Add option="-Wall" />
+					<Add option="-Og" />
 					<Add option="-g" />
 					<Add option="-std=gnu++11" />
 					<Add option="-mthreads" />
