Implememted ticket #371 "Create search fields for the navigator pages"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@579 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -318,6 +318,41 @@
 		<Unit filename="gui/NumeReStatusbar.hpp" />
 		<Unit filename="gui/NumeReWindow.cpp" />
 		<Unit filename="gui/NumeReWindow.h" />
+		<Unit filename="gui/compositions/debugviewer.cpp" />
+		<Unit filename="gui/compositions/debugviewer.hpp" />
+		<Unit filename="gui/compositions/filetree.cpp" />
+		<Unit filename="gui/compositions/filetree.hpp" />
+		<Unit filename="gui/compositions/gridtable.cpp" />
+		<Unit filename="gui/compositions/gridtable.hpp" />
+		<Unit filename="gui/compositions/grouppanel.cpp" />
+		<Unit filename="gui/compositions/grouppanel.hpp" />
+		<Unit filename="gui/compositions/helpviewer.cpp" />
+		<Unit filename="gui/compositions/helpviewer.hpp" />
+		<Unit filename="gui/compositions/imagepanel.cpp" />
+		<Unit filename="gui/compositions/imagepanel.hpp" />
+		<Unit filename="gui/compositions/procedureviewer.cpp" />
+		<Unit filename="gui/compositions/procedureviewer.hpp" />
+		<Unit filename="gui/compositions/tableeditpanel.cpp" />
+		<Unit filename="gui/compositions/tableeditpanel.hpp" />
+		<Unit filename="gui/compositions/tableviewer.cpp" />
+		<Unit filename="gui/compositions/tableviewer.hpp" />
+		<Unit filename="gui/compositions/treepanel.hpp" />
+		<Unit filename="gui/compositions/variableviewer.cpp" />
+		<Unit filename="gui/compositions/variableviewer.hpp" />
+		<Unit filename="gui/compositions/viewerbook.cpp" />
+		<Unit filename="gui/compositions/viewerbook.hpp" />
+		<Unit filename="gui/compositions/viewerframe.cpp" />
+		<Unit filename="gui/compositions/viewerframe.hpp" />
+		<Unit filename="gui/compositions/viewerpanel.cpp" />
+		<Unit filename="gui/compositions/viewerpanel.hpp" />
+		<Unit filename="gui/compositions/wxTermContainer.cpp" />
+		<Unit filename="gui/compositions/wxTermContainer.h" />
+		<Unit filename="gui/controls/searchctrl.cpp" />
+		<Unit filename="gui/controls/searchctrl.hpp" />
+		<Unit filename="gui/controls/treelistctrl.cpp" />
+		<Unit filename="gui/controls/treelistctrl.h" />
+		<Unit filename="gui/controls/treesearchctrl.cpp" />
+		<Unit filename="gui/controls/treesearchctrl.hpp" />
 		<Unit filename="gui/dialogs/AboutChameleonDialog.cpp" />
 		<Unit filename="gui/dialogs/AboutChameleonDialog.h" />
 		<Unit filename="gui/dialogs/AddVariableWatch.cpp" />
@@ -326,16 +361,12 @@
 		<Unit filename="gui/dialogs/OptionsDialog.h" />
 		<Unit filename="gui/dialogs/RemoteFileDialog.cpp" />
 		<Unit filename="gui/dialogs/RemoteFileDialog.h" />
-		<Unit filename="gui/dialogs/debugviewer.cpp" />
-		<Unit filename="gui/dialogs/debugviewer.hpp" />
 		<Unit filename="gui/dialogs/dependencydialog.cpp" />
 		<Unit filename="gui/dialogs/dependencydialog.hpp" />
 		<Unit filename="gui/dialogs/duplicatecodedialog.cpp" />
 		<Unit filename="gui/dialogs/duplicatecodedialog.hpp" />
 		<Unit filename="gui/dialogs/fndrpldialog.cpp" />
 		<Unit filename="gui/dialogs/fndrpldialog.hpp" />
-		<Unit filename="gui/dialogs/grouppanel.cpp" />
-		<Unit filename="gui/dialogs/grouppanel.hpp" />
 		<Unit filename="gui/dialogs/packagedialog.cpp" />
 		<Unit filename="gui/dialogs/packagedialog.hpp" />
 		<Unit filename="gui/dialogs/renamesymbolsdialog.cpp" />
@@ -344,12 +375,6 @@
 		<Unit filename="gui/dialogs/textoutputdialog.hpp" />
 		<Unit filename="gui/dialogs/tipdialog.cpp" />
 		<Unit filename="gui/dialogs/tipdialog.hpp" />
-		<Unit filename="gui/dialogs/treelistctrl.cpp" />
-		<Unit filename="gui/dialogs/treelistctrl.h" />
-		<Unit filename="gui/dialogs/variableviewer.cpp" />
-		<Unit filename="gui/dialogs/variableviewer.hpp" />
-		<Unit filename="gui/dialogs/wxTermContainer.cpp" />
-		<Unit filename="gui/dialogs/wxTermContainer.h" />
 		<Unit filename="gui/documentationbrowser.cpp" />
 		<Unit filename="gui/documentationbrowser.hpp" />
 		<Unit filename="gui/editor/NumeRePrintout.cpp" />
@@ -358,25 +383,11 @@
 		<Unit filename="gui/editor/editor.h" />
 		<Unit filename="gui/editor/history.cpp" />
 		<Unit filename="gui/editor/history.hpp" />
-		<Unit filename="gui/filetree.cpp" />
-		<Unit filename="gui/filetree.hpp" />
 		<Unit filename="gui/globals.hpp" />
 		<Unit filename="gui/graphviewer.cpp" />
 		<Unit filename="gui/graphviewer.hpp" />
-		<Unit filename="gui/gridtable.cpp" />
-		<Unit filename="gui/gridtable.hpp" />
-		<Unit filename="gui/helpviewer.cpp" />
-		<Unit filename="gui/helpviewer.hpp" />
-		<Unit filename="gui/imagepanel.cpp" />
-		<Unit filename="gui/imagepanel.hpp" />
 		<Unit filename="gui/numeredroptarget.cpp" />
 		<Unit filename="gui/numeredroptarget.hpp" />
-		<Unit filename="gui/procedureviewer.cpp" />
-		<Unit filename="gui/procedureviewer.hpp" />
-		<Unit filename="gui/tableeditpanel.cpp" />
-		<Unit filename="gui/tableeditpanel.hpp" />
-		<Unit filename="gui/tableviewer.cpp" />
-		<Unit filename="gui/tableviewer.hpp" />
 		<Unit filename="gui/terminal/LocalProcessManager.cpp" />
 		<Unit filename="gui/terminal/LocalProcessManager.h" />
 		<Unit filename="gui/terminal/PipedProcess.cpp" />
@@ -397,12 +408,6 @@
 		<Unit filename="gui/terminal/wxterm.cpp" />
 		<Unit filename="gui/terminal/wxterm.h" />
 		<Unit filename="gui/textsplashscreen.hpp" />
-		<Unit filename="gui/viewerbook.cpp" />
-		<Unit filename="gui/viewerbook.hpp" />
-		<Unit filename="gui/viewerframe.cpp" />
-		<Unit filename="gui/viewerframe.hpp" />
-		<Unit filename="gui/viewerpanel.cpp" />
-		<Unit filename="gui/viewerpanel.hpp" />
 		<Unit filename="gui/wx.cpp" />
 		<Unit filename="gui/wx.h" />
 		<Unit filename="gui/wxProportionalSplitterWindow.h" />
