Added GUI elements to the implementation of ticket #397
git-svn-id: https://svn.code.sf.net/p/numere/source/branches/ticket_397@592 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -376,6 +376,8 @@
 		<Unit filename="gui/dialogs/packagedialog.hpp" />
 		<Unit filename="gui/dialogs/renamesymbolsdialog.cpp" />
 		<Unit filename="gui/dialogs/renamesymbolsdialog.hpp" />
+		<Unit filename="gui/dialogs/revisiondialog.cpp" />
+		<Unit filename="gui/dialogs/revisiondialog.hpp" />
 		<Unit filename="gui/dialogs/textoutputdialog.cpp" />
 		<Unit filename="gui/dialogs/textoutputdialog.hpp" />
 		<Unit filename="gui/dialogs/tipdialog.cpp" />
