Improved the implementation of ticket #397 If the differences between the current revision root are smaller than the current file, only the differences are stored.
git-svn-id: https://svn.code.sf.net/p/numere/source/branches/ticket_397@604 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -296,6 +296,14 @@
 		<Unit filename="common/chameleonprocessevent.h" />
 		<Unit filename="common/datastructures.h" />
 		<Unit filename="common/debug.h" />
+		<Unit filename="common/dtl/Diff.hpp" />
+		<Unit filename="common/dtl/Diff3.hpp" />
+		<Unit filename="common/dtl/Lcs.hpp" />
+		<Unit filename="common/dtl/Sequence.hpp" />
+		<Unit filename="common/dtl/Ses.hpp" />
+		<Unit filename="common/dtl/dtl.hpp" />
+		<Unit filename="common/dtl/functors.hpp" />
+		<Unit filename="common/dtl/variables.hpp" />
 		<Unit filename="common/filerevisions.cpp" />
 		<Unit filename="common/filerevisions.hpp" />
 		<Unit filename="common/filewatcher.cpp" />
