Implemented ticket #485 "Global variable detector fails sometimes"
Missing comments will be added in the next revision.

git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@642 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -450,10 +450,14 @@
 		<Unit filename="gui/documentationbrowser.hpp" />
 		<Unit filename="gui/editor/NumeRePrintout.cpp" />
 		<Unit filename="gui/editor/NumeRePrintout.h" />
+		<Unit filename="gui/editor/codeanalyzer.cpp" />
+		<Unit filename="gui/editor/codeanalyzer.hpp" />
 		<Unit filename="gui/editor/editor.cpp" />
 		<Unit filename="gui/editor/editor.h" />
 		<Unit filename="gui/editor/history.cpp" />
 		<Unit filename="gui/editor/history.hpp" />
+		<Unit filename="gui/editor/searchcontroller.cpp" />
+		<Unit filename="gui/editor/searchcontroller.hpp" />
 		<Unit filename="gui/globals.hpp" />
 		<Unit filename="gui/graphviewer.cpp" />
 		<Unit filename="gui/graphviewer.hpp" />
