Implemented ticket #485 Enhanced code quality and further split the editor's code up
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@643 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -452,6 +452,8 @@
 		<Unit filename="gui/editor/NumeRePrintout.h" />
 		<Unit filename="gui/editor/codeanalyzer.cpp" />
 		<Unit filename="gui/editor/codeanalyzer.hpp" />
+		<Unit filename="gui/editor/codeformatter.cpp" />
+		<Unit filename="gui/editor/codeformatter.hpp" />
 		<Unit filename="gui/editor/editor.cpp" />
 		<Unit filename="gui/editor/editor.h" />
 		<Unit filename="gui/editor/history.cpp" />
