--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -599,7 +599,16 @@
 		<Unit filename="kernel/core/script.hpp" />
 		<Unit filename="kernel/core/settings.cpp" />
 		<Unit filename="kernel/core/settings.hpp" />
-		<Unit filename="kernel/core/stringparsing.cpp" />
+		<Unit filename="kernel/core/strings/stringdatastructures.hpp" />
+		<Unit filename="kernel/core/strings/stringfunchandler.cpp" />
+		<Unit filename="kernel/core/strings/stringfunchandler.hpp" />
+		<Unit filename="kernel/core/strings/stringfunctions.hpp" />
+		<Unit filename="kernel/core/strings/stringlogicparser.cpp" />
+		<Unit filename="kernel/core/strings/stringlogicparser.hpp" />
+		<Unit filename="kernel/core/strings/stringparser.cpp" />
+		<Unit filename="kernel/core/strings/stringparser.hpp" />
+		<Unit filename="kernel/core/strings/stringvarfactory.cpp" />
+		<Unit filename="kernel/core/strings/stringvarfactory.hpp" />
 		<Unit filename="kernel/core/structures.hpp" />
 		<Unit filename="kernel/core/ui/error.cpp" />
 		<Unit filename="kernel/core/ui/error.hpp" />
