--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -516,6 +516,7 @@
 		<Unit filename="kernel/core/ParserLib/muParserTokenReader.h" />
 		<Unit filename="kernel/core/built-in.cpp" />
 		<Unit filename="kernel/core/built-in.hpp" />
+		<Unit filename="kernel/core/commandfunctions.hpp" />
 		<Unit filename="kernel/core/datamanagement/cache.cpp" />
 		<Unit filename="kernel/core/datamanagement/cache.hpp" />
 		<Unit filename="kernel/core/datamanagement/cluster.cpp" />
