Further integrated MathGL 2.4.4. See also Ticket #204
git-svn-id: https://svn.code.sf.net/p/numere/source/branches/stringperformance@708 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -336,6 +336,7 @@
 			<Add option="-lgsl" />
 			<Add option="-lgslcblas" />
 			<Add option="-Wl,--stack,8388608" />
+			<Add option="-static-libstdc++" />
 		</Linker>
 		<Unit filename="Chameleon.rc">
 			<Option compilerVar="WINDRES" />
