Intermediate commit for ticket #418 - Implemented the filters - Reworked the smoothing driver code - Reduced the number of warnings in the parser library - Reduced code duplicates - Resolved an issue with "open" used as part of "compose...endcompose" blocks
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@742 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -469,6 +469,7 @@
 		<Unit filename="kernel/core/maths/command_implementations.hpp" />
 		<Unit filename="kernel/core/maths/define.cpp" />
 		<Unit filename="kernel/core/maths/define.hpp" />
+		<Unit filename="kernel/core/maths/filtering.hpp" />
 		<Unit filename="kernel/core/maths/fitcontroller.cpp" />
 		<Unit filename="kernel/core/maths/fitcontroller.hpp" />
 		<Unit filename="kernel/core/maths/fitting.cpp" />
