Implemented ticket #480 "Restrict NumeRe to single instance"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@746 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -277,6 +277,8 @@
 		<Unit filename="common/filewatcher.cpp" />
 		<Unit filename="common/filewatcher.hpp" />
 		<Unit filename="common/fixvsbug.h" />
+		<Unit filename="common/ipc.cpp" />
+		<Unit filename="common/ipc.hpp" />
 		<Unit filename="common/options.cpp" />
 		<Unit filename="common/recycler.cpp" />
 		<Unit filename="common/recycler.hpp" />
