--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -277,6 +277,8 @@
 		<Unit filename="common/filewatcher.cpp" />
 		<Unit filename="common/filewatcher.hpp" />
 		<Unit filename="common/fixvsbug.h" />
+		<Unit filename="common/ipc.cpp" />
+		<Unit filename="common/ipc.hpp" />
 		<Unit filename="common/options.cpp" />
 		<Unit filename="common/recycler.cpp" />
 		<Unit filename="common/recycler.hpp" />
@@ -390,12 +392,12 @@
 		<Unit filename="gui/terminal/networking.h" />
 		<Unit filename="gui/terminal/plinkconnect.cpp" />
 		<Unit filename="gui/terminal/plinkconnect.h" />
+		<Unit filename="gui/terminal/terminal.cpp" />
+		<Unit filename="gui/terminal/terminal.hpp" />
 		<Unit filename="gui/terminal/utils.cpp" />
 		<Unit filename="gui/terminal/winmesgbeep.cpp" />
 		<Unit filename="gui/terminal/wxssh.cpp" />
 		<Unit filename="gui/terminal/wxssh.h" />
-		<Unit filename="gui/terminal/wxterm.cpp" />
-		<Unit filename="gui/terminal/wxterm.h" />
 		<Unit filename="gui/textsplashscreen.hpp" />
 		<Unit filename="gui/wx.cpp" />
 		<Unit filename="gui/wx.h" />
@@ -440,6 +442,8 @@
 		<Unit filename="kernel/core/datamanagement/datafile.hpp" />
 		<Unit filename="kernel/core/datamanagement/dataops.cpp" />
 		<Unit filename="kernel/core/datamanagement/dataops.hpp" />
+		<Unit filename="kernel/core/datamanagement/fileadapter.cpp" />
+		<Unit filename="kernel/core/datamanagement/fileadapter.hpp" />
 		<Unit filename="kernel/core/datamanagement/indices.cpp" />
 		<Unit filename="kernel/core/datamanagement/memory.cpp" />
 		<Unit filename="kernel/core/datamanagement/memory.hpp" />
@@ -457,12 +461,12 @@
 		<Unit filename="kernel/core/documentation/doc_helper.hpp" />
 		<Unit filename="kernel/core/documentation/documentation.cpp" />
 		<Unit filename="kernel/core/documentation/documentation.hpp" />
-		<Unit filename="kernel/core/filesystem.cpp" />
-		<Unit filename="kernel/core/filesystem.hpp" />
 		<Unit filename="kernel/core/io/file.cpp" />
 		<Unit filename="kernel/core/io/file.hpp" />
 		<Unit filename="kernel/core/io/fileops.cpp" />
 		<Unit filename="kernel/core/io/fileops.hpp" />
+		<Unit filename="kernel/core/io/filesystem.cpp" />
+		<Unit filename="kernel/core/io/filesystem.hpp" />
 		<Unit filename="kernel/core/io/output.cpp" />
 		<Unit filename="kernel/core/io/output.hpp" />
 		<Unit filename="kernel/core/maths/command_implementations.cpp" />
@@ -493,8 +497,6 @@
 		<Unit filename="kernel/core/plotting/plotinfo.hpp" />
 		<Unit filename="kernel/core/plotting/plotting.cpp" />
 		<Unit filename="kernel/core/plotting/plotting.hpp" />
-		<Unit filename="kernel/core/plugin.cpp" />
-		<Unit filename="kernel/core/plugin.hpp" />
 		<Unit filename="kernel/core/plugin_histogram.cpp" />
 		<Unit filename="kernel/core/plugin_random.cpp" />
 		<Unit filename="kernel/core/plugin_statistics.cpp" />
@@ -503,6 +505,8 @@
 		<Unit filename="kernel/core/procedure/dependency.hpp" />
 		<Unit filename="kernel/core/procedure/flowctrl.cpp" />
 		<Unit filename="kernel/core/procedure/flowctrl.hpp" />
+		<Unit filename="kernel/core/procedure/plugin.cpp" />
+		<Unit filename="kernel/core/procedure/plugin.hpp" />
 		<Unit filename="kernel/core/procedure/procedure.cpp" />
 		<Unit filename="kernel/core/procedure/procedure.hpp" />
 		<Unit filename="kernel/core/procedure/procedurecommandline.hpp" />
