Fixed issue #544 "Crash when pressing F2"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@795 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -189,9 +189,11 @@
 				<Option compiler="tdm-gcc" />
 				<Compiler>
 					<Add option="-Wall" />
-					<Add option="-g" />
 					<Add option="-std=gnu++11" />
+					<Add option="-g" />
 					<Add option="-mthreads" />
+					<Add option="-ggdb3" />
+					<Add option="-fno-omit-frame-pointer" />
 					<Add option="-DDLLVER_MAJOR_MASK" />
 					<Add option="-DwxUSE_REGEX" />
 					<Add option="-DwxDIALOG_MODAL" />
