Implemented ticket #505 "Integrate Perlin noise"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@813 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -247,6 +247,7 @@
 			<Add option="-static-libstdc++" />
 			<Add option="-lmgl" />
 			<Add option="-lgsl" />
+			<Add option="-lnoise" />
 			<Add option="-lgslcblas" />
 			<Add option="-Wl,--stack,8388608" />
 			<Add option="-fopenmp" />
