Fixed issue #569 "matop function 'diag()' does not accept matrices as inputs"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@855 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -459,6 +459,8 @@
 		<Unit filename="kernel/core/maths/fitting.cpp" />
 		<Unit filename="kernel/core/maths/functionimplementation.cpp" />
 		<Unit filename="kernel/core/maths/functionimplementation.hpp" />
+		<Unit filename="kernel/core/maths/matdatastructures.hpp" />
+		<Unit filename="kernel/core/maths/matfuncs.hpp" />
 		<Unit filename="kernel/core/maths/matrixoperations.cpp" />
 		<Unit filename="kernel/core/maths/matrixoperations.hpp" />
 		<Unit filename="kernel/core/maths/odesolver.cpp" />
