--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -248,6 +248,7 @@
 			<Add option="-lmgl" />
 			<Add option="-lgsl" />
 			<Add option="-lnoise" />
+			<Add option="-lcurl" />
 			<Add option="-lgslcblas" />
 			<Add option="-Wl,--stack,8388608" />
 			<Add option="-fopenmp" />
@@ -270,6 +271,8 @@
 		<Unit filename="common/filerevisions.hpp" />
 		<Unit filename="common/filewatcher.cpp" />
 		<Unit filename="common/filewatcher.hpp" />
+		<Unit filename="common/http.cpp" />
+		<Unit filename="common/http.h" />
 		<Unit filename="common/ipc.cpp" />
 		<Unit filename="common/ipc.hpp" />
 		<Unit filename="common/options.cpp" />
@@ -338,6 +341,8 @@
 		<Unit filename="gui/dialogs/fndrpldialog.hpp" />
 		<Unit filename="gui/dialogs/packagedialog.cpp" />
 		<Unit filename="gui/dialogs/packagedialog.hpp" />
+		<Unit filename="gui/dialogs/pluginrepodialog.cpp" />
+		<Unit filename="gui/dialogs/pluginrepodialog.hpp" />
 		<Unit filename="gui/dialogs/renamesymbolsdialog.cpp" />
 		<Unit filename="gui/dialogs/renamesymbolsdialog.hpp" />
 		<Unit filename="gui/dialogs/revisiondialog.cpp" />
