Created branch for ticket #589
git-svn-id: https://svn.code.sf.net/p/numere/source/branches/ticket_589@892 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -450,6 +450,8 @@
 		<Unit filename="kernel/core/documentation/docgen.hpp" />
 		<Unit filename="kernel/core/documentation/documentation.cpp" />
 		<Unit filename="kernel/core/documentation/documentation.hpp" />
+		<Unit filename="kernel/core/interval.cpp" />
+		<Unit filename="kernel/core/interval.hpp" />
 		<Unit filename="kernel/core/io/file.cpp" />
 		<Unit filename="kernel/core/io/file.hpp" />
 		<Unit filename="kernel/core/io/fileops.cpp" />
