--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -483,6 +483,8 @@
 		<Unit filename="kernel/core/maths/resampler.cpp" />
 		<Unit filename="kernel/core/maths/resampler.h" />
 		<Unit filename="kernel/core/maths/spline.h" />
+		<Unit filename="kernel/core/maths/student_t.cpp" />
+		<Unit filename="kernel/core/maths/student_t.hpp" />
 		<Unit filename="kernel/core/maths/wavelet.cpp" />
 		<Unit filename="kernel/core/maths/wavelet.hpp" />
 		<Unit filename="kernel/core/plotting/graph_helper.cpp" />
