--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -529,6 +529,8 @@
 		<Unit filename="kernel/core/strings/stringvarfactory.cpp" />
 		<Unit filename="kernel/core/strings/stringvarfactory.hpp" />
 		<Unit filename="kernel/core/structures.hpp" />
+		<Unit filename="kernel/core/symdef.cpp" />
+		<Unit filename="kernel/core/symdef.hpp" />
 		<Unit filename="kernel/core/ui/error.cpp" />
 		<Unit filename="kernel/core/ui/error.hpp" />
 		<Unit filename="kernel/core/ui/language.cpp" />
