Implemented ticket #598 "Include whole files into packages"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@915 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -458,6 +458,8 @@
 		<Unit filename="kernel/core/io/fileops.hpp" />
 		<Unit filename="kernel/core/io/filesystem.cpp" />
 		<Unit filename="kernel/core/io/filesystem.hpp" />
+		<Unit filename="kernel/core/io/logger.cpp" />
+		<Unit filename="kernel/core/io/logger.hpp" />
 		<Unit filename="kernel/core/io/output.cpp" />
 		<Unit filename="kernel/core/io/output.hpp" />
 		<Unit filename="kernel/core/io/styledtextfile.cpp" />
