Improved the solution to embed documentation files in packages (see #598)
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@921 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -446,6 +446,8 @@
 		<Unit filename="kernel/core/debugger/debugger.hpp" />
 		<Unit filename="kernel/core/documentation/doc_helper.cpp" />
 		<Unit filename="kernel/core/documentation/doc_helper.hpp" />
+		<Unit filename="kernel/core/documentation/docfile.cpp" />
+		<Unit filename="kernel/core/documentation/docfile.hpp" />
 		<Unit filename="kernel/core/documentation/docgen.cpp" />
 		<Unit filename="kernel/core/documentation/docgen.hpp" />
 		<Unit filename="kernel/core/documentation/documentation.cpp" />
