--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -438,6 +438,8 @@
 		<Unit filename="kernel/core/datamanagement/stringmemory.hpp" />
 		<Unit filename="kernel/core/datamanagement/table.cpp" />
 		<Unit filename="kernel/core/datamanagement/table.hpp" />
+		<Unit filename="kernel/core/datamanagement/tablecolumn.cpp" />
+		<Unit filename="kernel/core/datamanagement/tablecolumn.hpp" />
 		<Unit filename="kernel/core/debugger/breakpointmanager.cpp" />
 		<Unit filename="kernel/core/debugger/breakpointmanager.hpp" />
 		<Unit filename="kernel/core/debugger/debugger.cpp" />
