Added new data management to plotting for ticket #615
git-svn-id: https://svn.code.sf.net/p/numere/source/branches/ticket_615@1037 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -492,6 +492,7 @@
 		<Unit filename="kernel/core/maths/wavelet.hpp" />
 		<Unit filename="kernel/core/plotting/graph_helper.cpp" />
 		<Unit filename="kernel/core/plotting/graph_helper.hpp" />
+		<Unit filename="kernel/core/plotting/plotasset.hpp" />
 		<Unit filename="kernel/core/plotting/plotdata.cpp" />
 		<Unit filename="kernel/core/plotting/plotdata.hpp" />
 		<Unit filename="kernel/core/plotting/plotinfo.hpp" />
