--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -496,6 +496,7 @@
 		<Unit filename="kernel/core/plotting/plotasset.hpp" />
 		<Unit filename="kernel/core/plotting/plotdata.cpp" />
 		<Unit filename="kernel/core/plotting/plotdata.hpp" />
+		<Unit filename="kernel/core/plotting/plotdef.hpp" />
 		<Unit filename="kernel/core/plotting/plotinfo.hpp" />
 		<Unit filename="kernel/core/plotting/plotting.cpp" />
 		<Unit filename="kernel/core/plotting/plotting.hpp" />
