Implemented ticket #631 "Create moving stats matop functions"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@1052 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -486,6 +486,7 @@
 		<Unit filename="kernel/core/maths/resampler.cpp" />
 		<Unit filename="kernel/core/maths/resampler.h" />
 		<Unit filename="kernel/core/maths/spline.h" />
+		<Unit filename="kernel/core/maths/statslogic.hpp" />
 		<Unit filename="kernel/core/maths/student_t.cpp" />
 		<Unit filename="kernel/core/maths/student_t.hpp" />
 		<Unit filename="kernel/core/maths/wavelet.cpp" />
