--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -376,6 +376,8 @@
 		<Unit filename="gui/terminal/gterm.hpp" />
 		<Unit filename="gui/terminal/terminal.cpp" />
 		<Unit filename="gui/terminal/terminal.hpp" />
+		<Unit filename="gui/terminal/terminalcalltip.cpp" />
+		<Unit filename="gui/terminal/terminalcalltip.hpp" />
 		<Unit filename="gui/terminal/utils.cpp" />
 		<Unit filename="gui/terminal/winmesgbeep.cpp" />
 		<Unit filename="gui/textsplashscreen.hpp" />
@@ -538,6 +540,8 @@
 		<Unit filename="kernel/core/structures.hpp" />
 		<Unit filename="kernel/core/symdef.cpp" />
 		<Unit filename="kernel/core/symdef.hpp" />
+		<Unit filename="kernel/core/ui/calltipprovider.cpp" />
+		<Unit filename="kernel/core/ui/calltipprovider.hpp" />
 		<Unit filename="kernel/core/ui/error.cpp" />
 		<Unit filename="kernel/core/ui/error.hpp" />
 		<Unit filename="kernel/core/ui/language.cpp" />
