Implemented part of ticket #672
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@1083 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -240,6 +240,7 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-Wno-narrowing" />
 			<Add option="-D__MSVCRT_VERSION__=0x0601" />
 		</Compiler>
 		<Linker>
