Implemented ticket #668 "'declare' should be includable"
git-svn-id: https://svn.code.sf.net/p/numere/source/trunk@1109 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -512,6 +512,8 @@
 		<Unit filename="kernel/core/procedure/dependency.hpp" />
 		<Unit filename="kernel/core/procedure/flowctrl.cpp" />
 		<Unit filename="kernel/core/procedure/flowctrl.hpp" />
+		<Unit filename="kernel/core/procedure/includer.cpp" />
+		<Unit filename="kernel/core/procedure/includer.hpp" />
 		<Unit filename="kernel/core/procedure/plugin.cpp" />
 		<Unit filename="kernel/core/procedure/plugin.hpp" />
 		<Unit filename="kernel/core/procedure/procedure.cpp" />
