Restructuring for #665 and #681 Changed to -std=g++2a and removed most of the using namespace std; statements from the headers.
git-svn-id: https://svn.code.sf.net/p/numere/source/branches/ticket_665_681@1120 d50cd26f-24d5-421e-9e7d-30b8b4216d91

--- a/Chameleon.cbp
+++ b/Chameleon.cbp
@@ -135,7 +135,7 @@
 				<Compiler>
 					<Add option="-O3" />
 					<Add option="-Wall" />
-					<Add option="-std=gnu++11" />
+					<Add option="-std=gnu++2a" />
 					<Add option="-mthreads" />
 					<Add option="-fopenmp" />
 					<Add option="-DDLLVER_MAJOR_MASK" />
